--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set version
         run: |
-          sed -i -e 's/0.1.0-alpha.1/${{ github.ref_name }}/' ./Mockapala.Export.Sqlite.csproj
+          sed -i -e 's/0.1.0-alpha.1/${{ github.event.inputs.version }}/' ./Mockapala.Export.Sqlite.csproj
         working-directory: Mockapala.Export.Sqlite
 
       - name: Build and Pack
